# kvm-gui

./: CMakeLists.txt  IMPLEMENTACION_COMPLETA.md  IMPLEMENTACION_QEMU_COMPLETA.md  README.md  test-vm.sh
.github/: copilot-instructions.md
resources/: icons.qrc
src/: main.cpp
src/core/: KVMManager.cpp  KVMManager.h  QemuManager.cpp  QemuManager.h  VMXmlManager.cpp  VMXmlManager.h  VirtualMachine.cpp  VirtualMachine.h
src/models/: VMListModel.cpp  VMListModel.h
src/ui/: AdvancedVMConfigDialog.cpp  AdvancedVMConfigDialog.h  DiskManagerDialog.cpp  DiskManagerDialog.h  MainWindow.cpp  MainWindow.h  MediaManagerDialog.cpp  MediaManagerDialog.h  NetworkManagerDialog.cpp  NetworkManagerDialog.h  NewVMDialog.cpp  NewVMDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  SnapshotManagerDialog.cpp  SnapshotManagerDialog.h  VMConfigDialog.cpp  VMConfigDialog.h  VMCreationWizard.cpp  VMCreationWizard.h  VMDetailsWidget.cpp  VMDetailsWidget.h  VMListWidget.cpp  VMListWidget.h
